# m3p

./: .gitignore  CMakeLists.txt  Cargo.toml  README  README.md  package-lock.json  package.json
Frontend/: package-lock.json
Frontend/src/routes/: +page.svelte
Frontend/src/routes/player/: +page.svelte
MusicWindow/: CMakeLists.txt  MusicWindow.qmlproject  MusicWindow.qmlproject.qtds  qmlmodules
MusicWindow/content/: App.qml  Screen01.ui.qml
MusicWindow/imports/: CMakeLists.txt
MusicWindow/imports/MusicWindow/: CMakeLists.txt  qmldir
MusicWindow/imports/MusicWindow/designer/: plugin.metainfo
MusicWindow/src/: import_qml_plugins.h
lib/: libmpdclient.so.2.21
src/: config.cpp  config.h  lib.rs  library.cpp  library.h  m3p.rs  main.cpp  mainwindow.h  mpd_connection.cpp  mpd_connection.h  song.cpp  song.h
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/client/: m3p.rs  mod.rs
src-tauri/src/commands/: changeVolume.rs  config.rs  player.rs  shuffle.rs  skip.rs  timechange.rs  timereturn.rs
src/lib/: Greet.svelte
src/routes/: +layout.svelte  +page.svelte  Settings.svelte  Toolbar.svelte  colorMode.js  global.css
src/routes/about/: +page.svelte
src/routes/player/: +page.svelte  MainPlayerContent.svelte  Playbar.svelte  seek-slider.css
src/routes/profile/: +page.svelte
src/routes/settings/: +page.svelte
src/routes/settings/about/: +page.svelte
src/routes/tools/: +page.svelte
