[package]
name = "m3p"
version = "0.1.0"
description = "Temp Description"
license = "ISC"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-mpd = "0.6.0"
once_cell = "1.18.0"
tokio = "1.34.0"
tokio-modbus = "0.9.0"

[dependencies.neon]
version = "0.10"
default-features = false
features = ["napi-6", "promise-api", "channel-api"]
