[package]
name = "m3p"
version = "0.1.0"
description = "Temp Description"
license = "ISC"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
confy = "0.5.1"
mpd = "0.1.0"
serde = "1.0.192"
serde_derive = "1.0.192"

[dependencies.neon]
version = "0.10"
default-features = false
features = ["napi-6", "promise-api", "channel-api"]
